# e-regex

./: .clang-format  .clang-tidy  .clangd  .gitignore  README.md  flake.nix  meson.build  single_include.hpp
benchmark/: main.cpp  meson.build
src/: e_regex.hpp  heuristics.hpp  match_result.hpp  matcher.hpp  meson.build  nodes.hpp  operators.hpp  regex.hpp  static_string.hpp  terminal.hpp  terminals.hpp  tokenization_result.hpp  tokenizer.hpp  tree_builder.hpp  utility.hpp
src/heuristics/: common.hpp  terminals.hpp
src/nodes/: basic.hpp  basic_node.hpp  common.hpp  get_expression.hpp  greedy.hpp  greedy_node.hpp  group.hpp  lazy.hpp  lazy_node.hpp  meta.hpp  negated.hpp  negated_node.hpp  possessive.hpp  possessive_node.hpp  repeated.hpp
src/operators/: basic_node.hpp  braces.hpp  common.hpp  end_anchor.hpp  greedy_node.hpp  hex.hpp  lazy_node.hpp  octal.hpp  operators.hpp  optional.hpp  plus.hpp  possessive_node.hpp  round_brackets.hpp  square_brackets.hpp  star.hpp  start_anchor.hpp
src/terminals/: alarm.hpp  any.hpp  carriage_return.hpp  common.hpp  digit_characters.hpp  escape.hpp  escaped.hpp  exact_matcher.hpp  form_feed.hpp  new_line.hpp  range.hpp  space_characters.hpp  tab.hpp  terminal.hpp  word_characters.hpp
src/terminals/anchors/: anchors.hpp  end.hpp  start.hpp
src/tokenization/: iterator.hpp  prebuilt_result.hpp  result.hpp  token.hpp  tokenizer.hpp
src/utilities/: admitted_set.hpp  balanced.hpp  concepts.hpp  extract_delimited_content.hpp  first_type.hpp  literal_string_view.hpp  macros.hpp  math.hpp  max.hpp  number_to_pack_string.hpp  pack_string.hpp  pack_string_to_number.hpp  reverse.hpp  split.hpp  static_stack.hpp  static_string.hpp  sum.hpp  tuple_cat.hpp
test/: catch_main.cpp  heuristics.cpp  meson.build  regex.cpp  strings.cpp  tokenization.cpp  utilities.cpp
